Version 1.0.9.1:
- Release date:
- New features:
- Improvements:
- Fixed bugs:


Version 1.0.8.1:
- Release date: 30 Jan 2018
- New features:
	- added GetMountPoints()
- Improvements:
	- filesystem functions quick review
	- android and ios icons
- Fixed bugs:
	- added GetMountPointsFromPath() missing implementation


Version 1.0.7.1: 18 Jan 2018
- Release date:
- New features:
- Improvements:
	- qt 4 and qt 5: fixed support for qt static builds, static qico plugin, translations
- Fixed bugs:


Version 1.0.6.1:
- Release date: 7 Jan 2018
- New features:
	- added CallTraits
	- added Factory
- Improvements:
- Fixed bugs:
	- fixed Optional test


Version 1.0.5.1:
- Release date: 15 Dec 2017
- New features:
	- added Any
	- added future errc
	- added Optional
- Improvements:
	- this_thread Yield(), SleepFor() and SleepUntil() available even if !CPPDEVTK_HAVE_THREAD_STORAGE
	- removed unnecessary exceptions
	- exception classes in separate files
	- exception propagation: added parameter to terminate or return null on failure
	- improved TypeInfo
- Fixed bugs:


Version 1.0.4.1:
- Release date: 27 Nov 2017
- New features:
	- added CPPDEVTK_NOEXCEPT
	- added exception propagation
	- added thread (not available on iOS < 9.0 and Mac OS X < 10.7 because __thread is not supported)
	- added interruption support to condition variable
	- added interruption support to semaphore
- Improvements:
	- Kubuntu: updated Qt to 5.9.2
	- moved EnableIf and IfThenElse as Conditional in type_traits.hpp
	- added more std exception classes equivalents
	- treat warning "not all control paths return a value" as error
	- uniform error reporting/handling in synchronization primitives
	- added time utils
	- removed sleep.hpp (replaced by this_thread sleep API)
	- enabled console test apps on Android and iOS
- Fixed bugs:
	- fixed internal pthread_mutex_timedlock(): absTime instead of relTime


Version 1.0.3.1:
- Release date: 17 Oct 2017
- New features:
	- added generic locking algorithms