@@ -3,6 +3,7 @@ Version 1.0.9.1:
 - New features:
 - Improvements:
 - Fixed bugs:
+	- fixed CoreApplicationBase::GetSupportedLanguageInfos()
 
 
 Version 1.0.8.1:
